[package]
name = "TodoList_RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
bcrypt = "0.15"
dotenvy = "0.15"
jsonwebtoken = "9.3"
mongodb = "3.1"
once_cell = "1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4"] }
